--- a/profile/profile.html
+++ b/profile/profile.html
@@ -79,7 +79,7 @@
                 <input class="field" placeholder="Enter Account Number" type="text" id="input-4" />
               </div>
               <div class="frame-7">
-                <div class="text-wrapper-9">*Account Type</div>
+                <div class="text-wrapper-9">Account Type</div>
                 <div class="component">
                   <select class="div-2">
                     <option value="" selected disabled>Select Account Type</option>
@@ -159,9 +159,9 @@
             <div class="spouse-financial">
               <div class="overlap-2">
                 <div class="overlap-group-3">
-                  <div class="spouse-s-FINANCIAL">SPOUSE'S FINANCIAL INFORMATION</div>
+                  <div class="spouse-s-FINANCIAL">SPOUSE' FINANCIAL INFORMATION</div>
                   <div class="frame-8">
-                    <div class="text-wrapper-9">*Employment Type</div>
+                    <div class="text-wrapper-9">Employment Type</div>
                     <div class="div-3">  
                       <select class="label-4">
                         <option value="" selected disabled>Select Type</option>
@@ -179,19 +179,19 @@
                 </div>
               </div>
               <div class="element-input-field-with-17">
-                <label class="text-wrapper-9" for="input-8">*Office Address</label>
+                <label class="text-wrapper-9" for="input-8">Office Address</label>
                 <input class="field-2" placeholder="Enter Office Address" type="text" id="input-8" />
               </div>
               <div class="element-input-field-with-18">
-                <div class="text-wrapper-9">*Date Hired/Start of Business</div>
+                <div class="text-wrapper-9">Date Hired/Start of Business</div>
                 <input class="field" placeholder="YYYY/MM/DD" type="text" />
               </div>
               <div class="element-input-field-with-6">
-                <label class="text-wrapper-9" for="input-9">*Employer/Business Name</label>
+                <label class="text-wrapper-9" for="input-9">Employer/Business Name</label>
                 <input class="input" placeholder="Enter Employer/Business Name" type="text" id="input-9" />
               </div>
               <div class="element-input-field-with-19">
-                <div class="text-wrapper-9">*Years of Employment/Business</div>
+                <div class="text-wrapper-9">Years of Employment/Business</div>
                 <input class="input" placeholder="Enter Years of Employment/Business" type="text" />
               </div>
               <div class="element-input-field-with-20">
@@ -199,43 +199,43 @@
                 <input class="field-3" placeholder="Enter Other Information" type="text" />
               </div>
               <div class="element-input-field-with-21">
-                <div class="text-wrapper-9">*Previous Employer</div>
+                <div class="text-wrapper-9">Previous Employer</div>
                 <input class="input" placeholder="Enter Previous Employer" type="text" />
               </div>
               <div class="group">
-                <div class="text-wrapper-12">*Allowances Business</div>
+                <div class="text-wrapper-12">Allowances Business</div>
                 <input class="field-4" placeholder="Enter Allowances Business" type="text" />
               </div>
               <div class="element-input-field-with-22">
-                <div class="text-wrapper-9">*Previous Title/Position</div>
+                <div class="text-wrapper-9">Previous Title/Position</div>
                 <input class="input" placeholder="Enter Previous Title/Position" type="text" />
               </div>
               <div class="element-input-field-with-23">
-                <div class="text-wrapper-9">*Commissions</div>
+                <div class="text-wrapper-9">Commissions</div>
                 <input class="input" placeholder="Enter Commissions" type="text" />
               </div>
               <div class="element-input-field-with-24">
-                <div class="text-wrapper-9">*Rental Income</div>
+                <div class="text-wrapper-9">Rental Income</div>
                 <input class="field-5" placeholder="Enter Rental Income" type="text" />
               </div>
               <div class="element-input-field-with-25">
-                <div class="text-wrapper-9">*Total</div>
+                <div class="text-wrapper-9">Total</div>
                 <input class="field-6" placeholder="Enter Total Amount" type="text" />
               </div>
               <div class="element-input-field-with-26">
-                <div class="text-wrapper-9">*Gross Annual Salary</div>
+                <div class="text-wrapper-9">Gross Annual Salary</div>
                 <input class="input" placeholder="Enter Gross Annual Salary" type="text" />
               </div>
               <div class="element-input-field-with-27">
-                <div class="text-wrapper-9">*Nature of Business</div>
+                <div class="text-wrapper-9">Nature of Business</div>
                 <input class="input" placeholder="Enter Nature of Business" type="text" />
               </div>
               <div class="element-input-field-with-28">
-                <div class="text-wrapper-13">*Present Title/Position</div>
+                <div class="text-wrapper-13">Present Title/Position</div>
                 <input class="input" placeholder="Enter Present Title/Position" type="text" />
               </div>
               <div class="element-input-field-with-29">
-                <div class="text-wrapper-14">*Business Income</div>
+                <div class="text-wrapper-14">Business Income</div>
                 <input class="field-7" placeholder="Enter Business Income" type="text" />
               </div>
             </div>
@@ -332,31 +332,31 @@
             
          <!--SPOUSE'S PERSONAL INFORMATION attributes-->
             <div class="spouse-information">
-              <div class="div-wrapper"><div class="text-wrapper-9">*First Name</div>
+              <div class="div-wrapper"><div class="text-wrapper-9">First Name</div>
               <input class="field-8" placeholder="Enter First Name" type="text" id="input-13" />
             </div>
               <div class="element-input-field-with-30">
-                <label class="text-wrapper-9" for="input-13">*Last Name</label>
+                <label class="text-wrapper-9" for="input-13">Last Name</label>
                 <input class="field-8" placeholder="Enter Last Name" type="text" id="input-13" />
               </div>
               <div class="element-input-field-with-31">
-                <label class="text-wrapper-9" for="input-14">*Residence Phone</label>
+                <label class="text-wrapper-9" for="input-14">Residence Phone</label>
                 <input class="field-9" placeholder="Enter Residence Phone" type="text" id="input-14" />
               </div>
               <div class="element-input-field-with-32">
-                <label class="text-wrapper-9" for="input-15">*Mobile Phone</label>
+                <label class="text-wrapper-9" for="input-15">Mobile Phone</label>
                 <input class="field-9" placeholder="Enter Mobile Phone" type="text" id="input-15" />
               </div>
               <div class="element-input-field-with-33">
-                <p class="text-wrapper-9">*SSS No. or GSIS No.</p>
+                <p class="text-wrapper-9">SSS No. or GSIS No.</p>
                 <input class="field-9" placeholder="Enter SSS No. or GSIS No." type="text" />
               </div>
               <div class="element-input-field-with-34">
-                <div class="text-wrapper-9">*Tax Identification No. (TIN)</div>
+                <div class="text-wrapper-9">Tax Identification No. (TIN)</div>
                 <input class="field-9" placeholder="Enter Tax Identification No. (TIN)" type="text" />
               </div>
               <div class="element-input-field-with-35">
-                <label class="text-wrapper-9" for="input-16">*Email</label>
+                <label class="text-wrapper-9" for="input-16">Email</label>
                 <input class="field-10" placeholder="Enter Email" type="text" id="input-16" />
               </div>
               <div class="element-input-field-with-36">
@@ -365,30 +365,30 @@
               </div>
               <input class="field-11" placeholder="Enter First Name" type="text" />
               <div class="element-input-field-with-37">
-                <div class="text-wrapper-15">*Date of Birth</div>
+                <div class="text-wrapper-15">Date of Birth</div>
                 <input class="field-13" placeholder="YYYY/MM/DD" type="text" />
               </div>
               <div class="element-input-field-with-38">
-                <div class="text-wrapper-15">*Age</div>
+                <div class="text-wrapper-15">Age</div>
                 <input class="field-13" placeholder="Enter Age" type="text" />
               </div>
               <div class="element-input-field-with-39">
-                <div class="text-wrapper-15">*Nationality</div>
+                <div class="text-wrapper-15">Nationality</div>
                 <input class="field-13" placeholder="Enter Nationality" type="text" />
               </div>
               <div class="element-input-field-with-40">
-                <div class="text-wrapper-15">*Citizenship</div>
+                <div class="text-wrapper-15">Citizenship</div>
                 <input class="field-13" placeholder="Enter Citizenship" type="text" />
               </div>
               <div class="element-input-field-with-41">
-                <div class="text-wrapper-9">*Birth Place</div>
+                <div class="text-wrapper-9">Birth Place</div>
                 <input class="field-14" placeholder="Enter Birth Place" type="text" />
               </div>
               <div class="element-input-field-with-42">
-                <label class="text-wrapper-9" for="input-18">*Mother's Maiden Name</label>
+                <label class="text-wrapper-9" for="input-18">Mother's Maiden Name</label>
                 <input class="field-15" placeholder="Enter Mother's Maiden Name" type="text" id="input-18" />
               </div>
-              <div class="spouse-s-PERSONAL">SPOUSE'S PERSONAL INFORMATION</div>
+              <div class="spouse-s-PERSONAL">SPOUSE' PERSONAL INFORMATION</div>
             </div>
 
             <!--BORROWER'S PERSONAL INFORMATION attributes-->
@@ -428,7 +428,7 @@
                 <input class="field-20" placeholder="Enter Email" type="text" id="input-23" />
               </div>
               <div class="element-input-field-with-51">
-                <label class="text-wrapper-9" for="input-24">Middle Name</label>
+                <label class="text-wrapper-9" for="input-24">*Middle Name</label>
                 <input class="field-16" placeholder="Enter Middle Name" type="text" id="input-24" />
               </div>
               <input class="field-21" placeholder="Enter First Name" type="text" />
