--- a/user/profile-agreement.html
+++ b/user/profile-agreement.html
@@ -241,7 +241,7 @@ if (groupContainer) {
         if (!checkbox1 || !checkbox2) {
             alert('Please ensure to check both confirmation boxes before saving. In order to continue your application.');
         } else {
-            window.location.href = "../profile/profile.html";
+            window.location.href = "./profile.html";
         }
     });
 }
