--- a/admin/admin-borrower-info.html
+++ b/admin/admin-borrower-info.html
@@ -58,8 +58,16 @@
                   <div class="frame-2"><div class="cell-2">2001</div></div>
                 </div>
                 <div class="borr-name">
-                  <div class="cell-wrapper"><div class="cell">Borr_Name</div></div>
-                  <div class="frame-2"><div class="cell-2">Juan Dela Cruz</div></div>
+                  <div class="cell-wrapper"><div class="cell">Borr_FName</div></div>
+                  <div class="frame-2"><div class="cell-2">Juan </div></div>
+                </div>
+                <div class="borr-name">
+                  <div class="cell-wrapper"><div class="cell">Borr_MName</div></div>
+                  <div class="frame-2"><div class="cell-2">Martinez</div></div>
+                </div>
+                <div class="borr-name">
+                  <div class="cell-wrapper"><div class="cell">Borr_SName</div></div>
+                  <div class="frame-2"><div class="cell-2">Dela Cruz</div></div>
                 </div>
                 <div class="borr-DOB">
                   <div class="cell-wrapper"><div class="cell">Borr_DOB</div></div>
@@ -154,8 +162,16 @@
                   <div class="frame-2"><div class="cell-7">juan.delacruz@email.com</div></div>
                 </div>
                 <div class="div-7">
-                  <div class="cell-wrapper"><div class="cell">Spouse_Name</div></div>
-                  <div class="frame-2"><div class="cell-2">Maria Dela Cruz</div></div>
+                  <div class="cell-wrapper"><div class="cell">Spouse_FName</div></div>
+                  <div class="frame-2"><div class="cell-2">Maria </div></div>
+                </div>
+                <div class="div-7">
+                  <div class="cell-wrapper"><div class="cell">Spouse_MName</div></div>
+                  <div class="frame-2"><div class="cell-2">Montojo</div></div>
+                </div>
+                <div class="div-7">
+                  <div class="cell-wrapper"><div class="cell">Spouse_SName</div></div>
+                  <div class="frame-2"><div class="cell-2">Dela Cruz</div></div>
                 </div>
                 <div class="sp-DOB">
                   <div class="cell-wrapper"><div class="cell">Sp_DOB</div></div>
@@ -272,6 +288,10 @@
     // Navigate to the landing-page.html in the user folder
     window.location.href = '../user/landing-page.html';
   });
+
+
+
+  
       </script>
 
   </body>
