--- a/user/submitted.html
+++ b/user/submitted.html
@@ -92,7 +92,7 @@
           </div>
           <div class="primary-button-wrapper3">
             <button class="primary-button31" id="primaryButton">
-              <b class="return-to-home1">RETURN TO HOME</b>
+              <b class="return-to-home1">Apply Loan Again</b>
             </button>
           </div>
         </div>
